--- a/spaceExplorer/src/main/resources/application.properties
+++ b/spaceExplorer/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.show_sql=true
