--- a/spaceExplorer/pom.xml
+++ b/spaceExplorer/pom.xml
@@ -72,6 +72,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>space-explorer</finalName>
     </build>
-
 </project>
