--- a/spaceExplorer/src/main/resources/application.properties
+++ b/spaceExplorer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/explorer-space-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/space-explorer-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
