--- a/spaceExplorer/src/main/resources/application.properties
+++ b/spaceExplorer/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:postgresql://database:5432/space-explorer-db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.datasource.driver-class-name=org.h2.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.show_sql=true
+
+server.port=${PORT}
