--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
+POSTGRES_DB=space-explorer-db
 POSTGRES_PORT=5432
 
 DATABASE_HOST=database /// HOST DO APPLICATION PROPERTIES
