--- a/spaceExplorer/src/main/resources/application.properties
+++ b/spaceExplorer/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.show_sql=true
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
